<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="email">Email</string>
    <string name="pass">Contraseña</string>
    <string name="confirm_pass">Confirmar contraseña</string>
    <string name="forgot">¿Olvidaste la Contraseña?</string>
    <string name="login">Iniciar Sesión</string>
    <string name="login_with_google">Inicia sesión con Google</string>
    <string name="login_with_facebook">Inicia sesión con Facebook</string>
    <string name="register">Registrarse</string>
    <string name="account">¿No tienes Cuenta?</string>
    <string name="Sign">Registrarse</string>
    <string name="Show">Show</string>
    <string name="promo">Me gustaría recibir su newsletter y otra información promocional.</string>
    <string name="app_name">Gagarin</string>
    <string name="campos_vacios">Algunos campos están vacios</string>
    <string name="email_vacio">El campo Email no puede estar vacio</string>
    <string name="pass_vacia">El campo contraseña no puede estar vacio</string>

    <!--  HOME  -->
    <string name="H_ultNoticias">Últimas Noticias</string>
    <string name="H_procLanzamientos">Próximos Lanzamientos</string>
    <string name="H_aprendeMas">Aprende Más</string>
    <string name="H_marte3d">Marte en 3D</string>
    <string name="H_satelites">Satélites de la Tierra</string>
    <string name="H_pruebalo">Pruebalo Ahora →</string>
    <string name="H_verMas">Ver Todo</string>
    <string name="H_title_activity_mapa_marte">Map</string>
    <string name="H_busca">Busca aquí</string>
    <!--  LANZAMIENTOS  -->
    <string name="L_tituloVentana">¡Echa un vistazo a los próximos lanzamientos!</string>
    <string name="L_countdown">Cuenta atrás</string>
    <string name="L_verDetalles">Leer más →</string>
    <string name="L_fechaPrevista">Fecha prevista</string>
    <string name="L_overview">Información General</string>
    <string name="L_lugar">Lugar de Lanzamiento</string>
    <string name="L_infoCohete">Informacion del Cohete</string>
    <string name="L_lugar_mapa">Mapa</string>
    <string name="L_countdowntimer">Lanzamiento Empezado</string>
    <string name="L_lanz">Provided By www.spacelaunchschedule.com</string>
    <string name="H_satel">Provided By www.stuffin.space</string>
    <!-- ROVERS MARTE -->
    <string name="RV_verRovers">Mira los Rovers de Marte →</string>
    <string name="RV_VerFotos">Fotos</string>
    <string name="RV_VerFotosFailure">Actualmente no hay fotos para este rover</string>
    <!-- Datos Opportunity -->
    <string name="opportunity_name">Opportunity</string>
    <string name="opportunity_landing">Cráter Gale </string>
    <string name="opportunity_date">6 de agosto de 2012</string>
    <string name="opportunity_title">Exploración de la Superficie</string>
    <string name="opportunity_body">El Opportunity fue el segundo de los dos vehículos exploradores lanzados en 2003 para aterrizar en Marte y comenzar a atravesar
        el Planeta Rojo en busca de señales de vida pasada. El rover todavía está explorando activamente el terreno marciano, habiendo sobrevivido con creces
        a su misión planificada de 90 días.
        Desde su aterrizaje en Marte en 2004, Opportunity ha realizado una serie de descubrimientos sobre el Planeta Rojo,
        incluida la evidencia dramática de que hace mucho tiempo al menos un área de Marte permaneció húmeda durante un período prolongado
        y que las condiciones podrían haber sido adecuadas para sustentar la vida microbiana.
        El rover Opportunity dejó de comunicarse con la Tierra cuando una severa tormenta de polvo en todo Marte cubrió su ubicación en junio de 2018.
        Después de más de mil comandos para restablecer el contacto, los ingenieros de la Instalación de Operaciones de Vuelo Espacial del Laboratorio de Propulsión a Chorro (JPL)
        de la NASA hicieron su último intento revivir Opportunity el martes 13 de febrero de 2019, pero fue en vano. La comunicación final del rover con energía solar
        se recibió el 10 de junio.</string>

    <!-- Datos Curiosity -->
    <string name="curiosity_name">Curiosity</string>
    <string name="curiosity_landing">Meridiani Planum</string>
    <string name="curiosity_date">25 de enero de 2004</string>
    <string name="curiosity_title">Examinando el cráter Gale</string>
    <string name="curiosity_body">Curiosity explora el cráter Gale y adquiere muestras de roca,
        suelo y aire para análisis a bordo. El rover del tamaño de un automóvil es tan alto como un jugador
        de baloncesto y usa un brazo de 7 pies de largo para colocar herramientas cerca de las rocas
        seleccionadas para su estudio. El gran tamaño de Curiosity le permite llevar un kit avanzado
        de 10 instrumentos científicos. Tiene herramientas que incluyen 17 cámaras, un láser para
        vaporizar y estudiar pequeños puntos puntuales de rocas a distancia y un taladro para recolectar
        muestras de roca en polvo. Busca rocas especiales que se formaron en el agua y/o tienen signos
        de orgánicos.</string>
    <!-- Datos Perseverance -->
    <string name="perseverance_name">Perseverance</string>
    <string name="perseverance_landing">Cráter Jezero</string>
    <string name="perseverance_date">18 de febrero de 2021</string>
    <string name="perseverance_title">Tecnologías para operaciones de superficie</string>
    <string name="perseverance_body">El Perseverance prueba una tecnología para extraer oxígeno de la atmósfera marciana,
        que es 96% de dióxido de carbono. Esta demostración ayuda a los planificadores de misiones a probar formas de utilizar
        los recursos naturales de Marte para apoyar a los exploradores humanos y mejorar los diseños de soporte vital,
        transporte y otros sistemas importantes para vivir y trabajar en Marte. El rover también monitorea el clima
        y el polvo en la atmósfera marciana. Dichos estudios son importantes para comprender los cambios diarios y estacionales en Marte,
        y ayudarán a los futuros exploradores humanos a predecir mejor el clima marciano.</string>
    <!-- Datos Spirit -->
    <string name="spirit_name">Spirit</string>
    <string name="spirit_landing">Sleepy Hollow</string>
    <string name="spirit_date">3 de enero de 2004</string>
    <string name="spirit_title">Exploración de la Superficie</string>
    <string name="spirit_body">Los rovers Spirit y Opportunity juntos representaron la misión Mars Exploration Rover Mission (MER) de la NASA,
        parte del Programa de Exploración de Marte. Lanzados con un mes de diferencia en 2003, el principal objetivo científico de los rovers gemelos era buscar
        una variedad de rocas y tipos de suelo y luego buscar pistas sobre la actividad pasada del agua en Marte.
        Cada rover es aproximadamente del tamaño de un carrito de golf y siete veces más pesado (alrededor de 405 libras o 185 kilogramos)
        que el rover Sojourner lanzado en la misión Mars Pathfinder to Mars en 1996.
        Spirit y Opportunity fueron enviados a lados opuestos de Marte a lugares que se sospechaba que habían sido afectados por agua líquida en el pasado.
        El plan era que los rovers se movieran de un lugar a otro, realizaran investigaciones geológicas y tomaran fotografías con cámaras montadas en el mástil
        (a unos 5 pies o 1,5 metros del suelo) que proporcionaban vistas estereoscópicas de 360 grados del terreno.</string>
    <!-- Settings -->
    <string name="settings_title">Ajustes</string>
    <string name="settings_account">Ajustes de Cuenta</string>
    <string name="settings_notifications">Notificaciones</string>
    <string name="settings_about_us">Sobre nosotros</string>
    <string name="settings_github">Github</string>
    <string name="settings_logout">Cerrar Sesión</string>
    <string name="account_settings_title">Ajustes de Cuenta</string>
    <string name="account_username">Usuario</string>
    <string name="account_password">Contraseña</string>
    <string name="save_account_settings">Guardar</string>
    <string name="launch_notification">Lanzar notificaciones</string>
    <string name="news_notification">Últimas notificaciones de noticias</string>
    <string name="aboutus_name_1">Ionut Alin</string>
    <string name="aboutus_developer">Desarrollador</string>
    <string name="aboutus_name_2">Fran Ruiz</string>
    <string name="aboutus_name_3">Fabiola Decena</string>
    <string name="aboutus_ux">UX Designer</string>
    <string name="aboutus_name_4">Pablo Benito</string>
    <!-- Login Facebook -->
    <string name="facebook_app_id">242835757644573</string>
    <string name="fb_login_protocol_scheme">fb242835757644573</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Nombre de usuario</string>
    <string name="news_menu">Noticias</string>
    <string name="home_menu">Home</string>
    <string name="launches_menu">Lanzamientos</string>
    <string name="mars_menu">Marte</string>
    <string name="satellites_menu">Satelites</string>
    <string name="settings_menu">Ajustes</string>
    <string name="title_activity_maps">Mapa</string>

</resources>