<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterScreen"
    android:id="@+id/root2">

    <ImageView
        android:id="@+id/register_imageView"
        android:layout_width="413dp"
        android:layout_height="744dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/fondo_login" />

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/register_blur_card"
        android:layout_width="311dp"
        android:layout_height="475dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/text_style_2"
        app:layout_constraintBottom_toBottomOf="@+id/register_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_content_register"
            style="@style/CardViewStyle"
            android:layout_width="311dp"
            android:layout_height="475dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/raleway_semibold"
            android:gravity="center_horizontal"
            android:paddingTop="85dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/register_imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_ED_email"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="265dp"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="32dp"
                android:elevation="8dp"
                android:ems="10"
                app:hintEnabled="false"
                android:inputType="textEmailAddress"
                app:boxBackgroundColor="@color/opacity2"
                app:boxStrokeColor="@color/super_white"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeWidth="0px"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_ed_email"
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:layout_height="match_parent"
                    android:hint="@string/email_hint"
                    android:textColor="@color/super_white"
                    android:textColorHint="@color/super_white"
                    android:fontFamily="@font/raleway_medium" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_ED_username"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="265dp"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="107dp"
                android:elevation="8dp"
                android:ems="10"
                app:hintEnabled="false"
                android:inputType="textEmailAddress"
                app:boxBackgroundColor="@color/opacity2"
                app:boxStrokeColor="@color/super_white"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeWidth="0px"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_ed_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/username_hint"
                    android:textColor="@color/super_white"
                    android:textColorHint="@color/super_white"
                    android:fontFamily="@font/raleway_medium" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_ED_pass"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="265dp"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                app:passwordToggleTint="@color/white"
                android:layout_marginTop="182dp"
                android:elevation="8dp"
                android:ems="10"
                app:hintEnabled="false"
                app:boxStrokeColor="@color/super_white"
                app:boxBackgroundColor="@color/opacity2"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeWidth="0px"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_ed_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/raleway_medium"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:textColor="@color/super_white"
                    android:textColorHint="@color/super_white" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_ED_confirm_pass"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="265dp"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                app:passwordToggleTint="@color/white"
                android:layout_marginTop="257dp"
                android:elevation="8dp"
                android:ems="10"
                app:hintEnabled="false"
                app:boxStrokeColor="@color/super_white"
                app:boxBackgroundColor="@color/opacity2"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeWidth="0px"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_ed_confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/raleway_medium"
                    android:hint="@string/confirm_pass"
                    android:inputType="textPassword"
                    android:textColor="@color/super_white"
                    android:textColorHint="@color/super_white" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/BTN_register"
                style="@style/ButtonStraight"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="337dp"
                android:elevation="8dp"
                android:fontFamily="@font/raleway_semibold"
                android:paddingTop="1dp"
                android:text="@string/register"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgot"
                app:layout_constraintVertical_bias="0.058" />

            <TextView
                android:id="@+id/promo"
                android:layout_width="252dp"
                android:layout_height="50dp"
                android:layout_marginLeft="38dp"
                android:layout_marginTop="408dp"
                android:gravity="center"
                android:elevation="12dp"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/promo"
                android:textColor="@color/gray" />
            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="409dp"
                android:layout_marginLeft="9.5dp"/>
            <TextView
                android:id="@+id/register_Show2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="230dp"
                android:layout_marginTop="272dp"
                android:elevation="8dp"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/Show"
                android:textColor="@color/super_white" />
            <TextView
                android:id="@+id/register_Show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="230dp"
                android:layout_marginTop="197dp"
                android:elevation="8dp"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/Show"
                android:textColor="@color/super_white" />

        </androidx.cardview.widget.CardView>

    </eightbitlab.com.blurview.BlurView>

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/register_blur_tv"
        android:layout_width="416dp"
        android:layout_height="125dp"
        android:background="@drawable/text_style_3"
        android:paddingTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/register_tv_title_login"
            android:layout_width="416dp"
            android:layout_height="125dp"
            android:background="@drawable/text_style_4"
            android:fontFamily="@font/raleway_semibold"
            android:gravity="center_horizontal"
            android:paddingTop="50dp"
            android:text="Gagarin"
            android:textColor="#FFFFFF"
            android:textSize="48dp"
            app:layout_constraintTop_toTopOf='@id/register_blur_tv'/>

    </eightbitlab.com.blurview.BlurView>
</androidx.constraintlayout.widget.ConstraintLayout>