<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AccountSettingsScreen">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:layout_constraintVertical_bias="0.0">

    </FrameLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/blackish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screen_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/account_settings_title"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="16dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:rotationX="0"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chevron_left" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name_layout"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        app:hintEnabled="false"
        android:textColorHint="@color/super_white"
        app:layout_constraintTop_toBottomOf="@+id/divider3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_txti"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:fontFamily="@font/raleway_medium"
            android:hint="@string/account_username"
            android:inputType="textPassword"
            android:password="false"
            android:textColor="@color/white"
            android:textColorHint="@color/super_white"
            android:textSize="17sp" />


    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:background="@color/blackish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name_layout"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:hintEnabled="false"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/super_white"
        app:layout_constraintTop_toTopOf="@+id/divider4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name_txti"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:fontFamily="@font/raleway_medium"
            android:hint="@string/account_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/super_white"
            android:textSize="17sp" />


    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/divider5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:background="@color/blackish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_layout" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/city_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="@color/cardview_light_background"
        app:layout_constraintTop_toBottomOf="@+id/last_name_layout">

        <TextView
            android:id="@+id/settings_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/save_account_settings"
            android:textColor="@color/accept_blue"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider7"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:background="@color/blackish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>